--- a/seedqr/pom.xml
+++ b/seedqr/pom.xml
@@ -36,5 +36,10 @@
             <artifactId>javase</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mybatis</groupId>
+            <artifactId>mybatis</artifactId>
+            <version>3.4.1</version>
+        </dependency>
     </dependencies>
 </project>
