--- a/seedqr/pom.xml
+++ b/seedqr/pom.xml
@@ -18,6 +18,10 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+            <id>org.primefaces</id>
+            <url>http://repository.primefaces.org/</url>
+        </repository>
     </repositories>
     <dependencies>
         <dependency>
@@ -30,6 +34,11 @@
             <groupId>org.primefaces</groupId>
             <artifactId>primefaces</artifactId>
             <version>6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.primefaces.themes</groupId>
+            <artifactId>all-themes</artifactId>
+            <version>1.0.10</version>
         </dependency>
         <dependency>
             <groupId>com.github.kenglxn.qrgen</groupId>
