--- a/seedqr/src/main/webapp/WEB-INF/web.xml
+++ b/seedqr/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>omega</param-value>
+        <param-value>bootstrap</param-value>
     </context-param>
     <filter>
         <filter-name>UTF-8 Filter</filter-name>
@@ -14,6 +14,16 @@
         <filter-name>UTF-8 Filter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <filter>
+        <filter-name>Query Filter</filter-name>
+        <filter-class>seedqr.gui.QueryFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>Query Filter</filter-name>
+        <url-pattern>/s</url-pattern>
+    </filter-mapping>
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
