--- a/seedqr/src/main/webapp/WEB-INF/web.xml
+++ b/seedqr/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,6 @@
         <filter-name>UTF-8 Filter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
     <filter>
         <filter-name>Query Filter</filter-name>
         <filter-class>seedqr.gui.QueryFilter</filter-class>
@@ -23,7 +22,6 @@
         <filter-name>Query Filter</filter-name>
         <url-pattern>/s</url-pattern>
     </filter-mapping>
-    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -32,6 +30,14 @@
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>Download Servlet</servlet-name>
+        <servlet-class>seedqr.gui.DownloadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Download Servlet</servlet-name>
+        <url-pattern>/download</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
