--- a/seedqr/src/main/webapp/WEB-INF/web.xml
+++ b/seedqr/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <context-param>
         <param-name>primefaces.THEME</param-name>
-        <param-value>bootstrap</param-value>
+        <param-value>omega</param-value>
     </context-param>
     <filter>
         <filter-name>UTF-8 Filter</filter-name>
