--- a/seedqr/src/main/webapp/WEB-INF/web.xml
+++ b/seedqr/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,17 @@
         <filter-name>Query Filter</filter-name>
         <url-pattern>/s</url-pattern>
     </filter-mapping>
+    
+    
+    <servlet>
+        <servlet-name>restApplication</servlet-name>
+        <servlet-class>javax.ws.rs.core.Application</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>restApplication</servlet-name>
+        <url-pattern>/api/*</url-pattern>
+    </servlet-mapping>
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
