--- a/seedqr/src/main/webapp/WEB-INF/web.xml
+++ b/seedqr/src/main/webapp/WEB-INF/web.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>omega</param-value>
@@ -22,8 +20,6 @@
         <filter-name>Query Filter</filter-name>
         <url-pattern>/s</url-pattern>
     </filter-mapping>
-    
-    
     <servlet>
         <servlet-name>restApplication</servlet-name>
         <servlet-class>javax.ws.rs.core.Application</servlet-class>
@@ -32,7 +28,6 @@
         <servlet-name>restApplication</servlet-name>
         <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
-    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -51,7 +46,7 @@
         <url-pattern>/download</url-pattern>
     </servlet-mapping>
     <session-config>
-        <session-timeout>1440</session-timeout>
+        <session-timeout>30</session-timeout>
     </session-config>
     <welcome-file-list>
         <welcome-file>index.xhtml</welcome-file>
